update to run it via gradle and changing config